logs/fieldmax.log
ERROR 2026-02-23 18:58:50,531 log 34707 123612746987200 Internal Server Error: /shop/
Traceback (most recent call last):
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/defaulttags.py", line 1067, in find_library
    return parser.libraries[name]
           ~~~~~~~~~~~~~~~~^^^^^^
KeyError: 'cloudinary'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/core/handlers/base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/website/views.py", line 2516, in shop_view
    return render(request, 'website/shop.html', context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/backends/django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/base.py", line 585, in parse
    raise self.error(token, e)
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/base.py", line 583, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/base.py", line 585, in parse
    raise self.error(token, e)
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/base.py", line 583, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/defaulttags.py", line 1129, in load
    lib = find_library(parser, name)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/kk/fieldmax/venv/lib/python3.12/site-packages/django/template/defaulttags.py", line 1069, in find_library
    raise TemplateSyntaxError(
django.template.exceptions.TemplateSyntaxError: Template: /home/kk/fieldmax/templates/website/shop.html, 'cloudinary' is not a registered tag library. Must be one of:
admin_list
admin_modify
admin_urls
auth
cache
i18n
l10n
log
sales_extras
staff_tags
static
tz
